add vista interacciones del usuario

--- a/AppBlog/templates/posteo_estadisticas.html
+++ b/AppBlog/templates/posteo_estadisticas.html
@@ -4,14 +4,15 @@
 <br />
 
 <div class="container mt-5">
-  <h1>Estadísticas de Posteos</h1>
+  <h1>Estadisticas de Posteos</h1>
+  <br />
   <table class="table">
     <thead>
       <tr>
-        <th>Título</th>
+        <th>Titulo</th>
         <th>Likes</th>
         <th>Dislikes</th>
-        <th>Puntuación</th>
+        <th>Puntuacion</th>
       </tr>
     </thead>
     <tbody>
