--- a/AppBlog/templates/edicionPerfil.html
+++ b/AppBlog/templates/edicionPerfil.html
@@ -1,12 +1,9 @@
-{% extends 'home.html' %}
-
-{% block content %}
+{% extends 'home.html' %} {% load static %} {% block content %}
 
 <br>
 <br>
-<br>
 
-<div class="container text-center">
+<div class="container mt-5 text-center">
     <h1>Editar Perfil</h1>
 </div>
 
