--- a/AppBlog/templates/posteo_estadisticas.html
+++ b/AppBlog/templates/posteo_estadisticas.html
@@ -4,7 +4,7 @@
 <br />
 
 <div class="container mt-5">
-  <h1>Estadisticas de Posteos</h1>
+  <h1>Ranking de Posteos</h1>
   <br />
   <table class="table">
     <thead>
