--- a/AppBlog/templates/user_interactions.html
+++ b/AppBlog/templates/user_interactions.html
@@ -4,13 +4,13 @@
 <br />
 
 <div class="container mt-5">
-  <h1>Mis interacciones</h1>
+  <h1>Mi actividad</h1>
   <br />
   <table class="table">
     <thead>
       <tr>
-        <th>Titulo del Posteo</th>
-        <th>Interaccion</th>
+        <th>Titulo</th>
+        <th>Mi voto</th>
       </tr>
     </thead>
     <tbody>
