--- a/AppBlog/templates/navbar.html
+++ b/AppBlog/templates/navbar.html
@@ -19,22 +19,19 @@
 
         {% if request.user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">editar_perfil</a>
+            <a class="nav-link" href="{% url 'user_interactions' %}">MiActividad</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">editar_perfil</a>
+            <a class="nav-link" href="{% url 'posteo_estadisticas' %}">Votacion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">editar_perfil</a>
+            <a class="nav-link" href="{% url 'editar_perfil' %}">Perfil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">editar_perfil</a>
+            <a class="nav-link" href="{% url 'nuevo_posteo' %}">NuevoPosteo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">editar_perfil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">editar_perfil</a>
+            <a class="nav-link" href="{% url 'editar_perfil' %}">EditarPerfil</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'editar_perfil' %}">Otros</a>
@@ -44,6 +41,7 @@
           </li>
         {% endif %}
 
+        <div class="container"></div>
         <div class="container"></div>
         <div class="container"></div>
         <div class="container"></div>
