add vista delete post

--- a/AppBlog/templates/navbar.html
+++ b/AppBlog/templates/navbar.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="{% url 'user_interactions' %}">MiActividad</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'posteo_estadisticas' %}">Votacion</a>
+            <a class="nav-link" href="{% url 'posteo_estadisticas' %}">Ranking</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'editar_perfil' %}">Perfil</a>
@@ -31,13 +31,13 @@
             <a class="nav-link" href="{% url 'nuevo_posteo' %}">NuevoPosteo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">EditarPerfil</a>
+            <a class="nav-link" href="{% url 'lista_posteos' %}">EliminarPosteo</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'editar_perfil' %}">Otros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'editar_perfil' %}">Conóceme</a>
+            <a class="nav-link" href="{% url 'editar_perfil' %}">QuienSoy</a>
           </li>
         {% endif %}
 
