add proteccion a rutas

--- a/AppBlog/templates/registro.html
+++ b/AppBlog/templates/registro.html
@@ -1,11 +1,9 @@
-{% extends 'home.html' %}
-
-{% block content %}
+{% extends 'home.html' %} {% load static %} {% block content %}
 
 <br>
 <br>
 
-<div class="container text-center">
+<div class="container mt-5 text-center">
     <h1>Registro de Nuevo Usuario</h1>
 </div>
 
