--- a/AppBlog/templates/login.html
+++ b/AppBlog/templates/login.html
@@ -33,7 +33,7 @@
                     {% if form.errors %}
                         <p class="label label-danger">
                             Tu usuario y contraseña no coinciden 
-                            Intenta nuevamente.
+                            Intentalo nuevamente.
                         </p>
                     {% endif %}
     
@@ -44,7 +44,7 @@
             </div>
         </div>
     <br>
-    <p>Aun no tienes cuenta? <a href="{% url 'registro' %}">Regístrate</a></p>
+    <p>No tienes cuenta? <a href="{% url 'registro' %}">Registrate</a></p>
 </div>
 <br>
 <br>
