--- a/AppBlog/templates/navbar.html
+++ b/AppBlog/templates/navbar.html
@@ -26,9 +26,6 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'posteo_estadisticas' %}">Ranking</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'editar_perfil' %}">Perfil</a>
-        </li>
 
         {% if request.user.is_staff %}
         <li class="nav-item">
@@ -45,10 +42,12 @@
           <a class="nav-link" href="{% url 'editar_perfil' %}">Otros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'editar_perfil' %}">QuienSoy</a>
+          <a class="nav-link" href="{% url 'editar_perfil' %}">Creditos</a>
         </li>
         {% endif %}
 
+        <div class="container"></div>
+        <div class="container"></div>
         <div class="container"></div>
         <div class="container"></div>
         <div class="container"></div>
@@ -61,7 +60,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'editar_perfil' %}"
               ><span class="text-primary"
-                >{{ request.user.first_name }}</span
+                >{{ request.user.username }}</span
               ></a
             >
           </li>
