add vista acerca de mi

--- a/AppBlog/templates/navbar.html
+++ b/AppBlog/templates/navbar.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="{% url 'editar_perfil' %}">Otros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'editar_perfil' %}">Creditos</a>
+          <a class="nav-link" href="{% url 'acerca_de_mi' %}">Creditos</a>
         </li>
         {% endif %}
 
