--- a/AppBlog/static/css/estilos.css
+++ b/AppBlog/static/css/estilos.css
@@ -313,6 +313,42 @@ h6 {
 	background-color: rgb(255, 127, 80);
 }
 
+/* Acerca de mi */
+
+.btn-outline-primary {
+    border: 2px solid #007bff;
+    color: #007bff;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.btn-outline-primary:hover {
+    background-color: #007bff;
+    color: #ffffff;
+}
+
+.acerca-de-mi-card {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #343a40; 
+    color: #ffffff; 
+}
+
+.acerca-de-mi-card-header {
+    font-size: 1.5rem;
+}
+
+.acerca-de-mi-card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+.acerca-de-mi-card-body img {
+    border: 3px solid #ffffff;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
 
 /* Paginación prev - next */
 
