--- a/AppBlog/templates/acercaDeMi.html
+++ b/AppBlog/templates/acercaDeMi.html
@@ -1,45 +1,36 @@
+{% extends 'home.html' %} {% load static %} {% block content %}
 
-{% extends 'home.html' %}
-{% load static %}
+<br />
+<br />
 
-{% block content %}
-
-<br>
-<br>
-
-
-    <div class="container">
-       <h2 class="text-center text-dark">
-           Acerca de Mi
-       </h2>
-       <br>
-       <div class="row g-4">
-           <div class="col-md-6 col-lg-3">
-               <div class="card bg-success">
-                    <div class="card-body text-center">
-                        <img src="{% static 'imagenes/jp2.jpeg' %}" class="rounded-circle mb-3" width="150px">
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card acerca-de-mi-card">
+                <div class="card-header acerca-de-mi-card-header text-center bg-secondary text-white">
+                    <h2>Acerca de Mi</h2>
+                </div>
+                <div class="card-body acerca-de-mi-card-body text-center">
+                    <img src="{% static 'imagenes/mmunarriz.jpg' %}" class="rounded-circle mb-3" width="150px">
                     <h3 class="card-title mb-3">Mariano Munarriz</h3>
                     <p class="card-text">Desarrollador de software</p>
-                    <p class="card-text">Sigueme en:</p>
-                    <a href="#"><i class="bi bi-github text-dark mx-1"></i></a>
-                    <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <p class="card-text">Apasionado por la tecnología y el desarrollo de soluciones innovadoras.</p>
+                    <hr>
+                    <h5>Sígueme en:</h5>
+                    <div>
+                        <a href="https://www.linkedin.com/in/mariano-munarriz/" target="_blank" class="btn btn-outline-primary mx-1">
+                            <i class="bi bi-linkedin"></i> LinkedIn
+                        </a>
                     </div>
-               </div>
-           </div>
-           <div class="col">
-            <div class="">
-                 <div class="text-center">
-                    <p>Blah blah</p>
-                 </div>
+                </div>
             </div>
         </div>
-       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+</div>
 
-
+<br>
+<br>
+<br>
+<br>
 
 {% endblock %}
