--- a/AppBlog/templates/acercaDeMi.html
+++ b/AppBlog/templates/acercaDeMi.html
@@ -14,9 +14,9 @@
                     <img src="{% static 'imagenes/mmunarriz.jpg' %}" class="rounded-circle mb-3" width="150px">
                     <h3 class="card-title mb-3">Mariano Munarriz</h3>
                     <p class="card-text">Desarrollador de software</p>
-                    <p class="card-text">Apasionado por la tecnología y el desarrollo de soluciones innovadoras.</p>
+                    <p class="card-text">Apasionado por la tecnologia y el desarrollo de soluciones innovadoras.</p>
                     <hr>
-                    <h5>Sígueme en:</h5>
+                    <h5>Seguime en:</h5>
                     <div>
                         <a href="https://www.linkedin.com/in/mariano-munarriz/" target="_blank" class="btn btn-outline-primary mx-1">
                             <i class="bi bi-linkedin"></i> LinkedIn
